# max-studio-tools

./: .clangd  .gitmodules  CMakeLists.txt  README.md  build.sh
aireq/: aireq_tilde.cpp
aireq/dsp/: aireq_coeffs.h  aireq_dsp.cpp  aireq_dsp.h
bloomeq/: bloomeq_tilde.cpp
bloomeq/dsp/: Tube2.cpp  Tube2.h  bloomeq_dsp.cpp  bloomeq_dsp.h  chowdsp_wdf.h
common/: biquad_coeffs.h  biquad_state.h  but_filter.h  denormal_guard.h  dsp_math.h  dynamic_biquad.h  oversample.h  stereo_interleave.h  stereo_os_base.h  vec.h
contoureq/: contoureq_tilde.cpp
contoureq/dsp/: Baxandall.cpp  Baxandall.h  Baxandall3.cpp  Baxandall3.h  contoureq_dsp.cpp  contoureq_dsp.h
focuseq/: focuseq_tilde.cpp
focuseq/dsp/: Spiral2.cpp  Spiral2.h  focuseq_dsp.cpp  focuseq_dsp.h
silkeq/: silkeq_tilde.cpp
silkeq/dsp/: Coils.cpp  Coils.h  silkeq_dsp.cpp  silkeq_dsp.h
toolchain/: toolchain-mingw.cmake
